--- a/www/styles.css
+++ b/www/styles.css
@@ -23,3 +23,8 @@
   opacity: 0.95;
   transition-delay: 0;
 }
+
+/* Allows pop-up modal to not be greyed out*/
+.modal-backdrop {
+z-index: 1000;
+}
